<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FF7BF6B2"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--  Parent Linear layout -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="#FF7BF6B2"
        android:orientation="vertical">
        <!-- Parent layout of all content in this ui-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <!-- Text field for email-->
            <EditText
                android:id="@+id/user_email"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="#f3f3f3"
                android:hint="Email"
                android:paddingLeft="5dp" />
            <!--Text field for password-->
            <EditText
                android:id="@+id/user_pass"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="#f3f3f3"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingLeft="5dp" />
            <!--Layout for log in button-->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">
                <!--LogIn button-->
                <Button
                    android:id="@+id/logIn_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="#FFFCFCFD"
                    android:text="LogIn"
                    android:textColor="#FF3FB543"
                    android:textSize="13dp"
                    android:onClick="performLogin"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>